--- a/coverLetter.tex
+++ b/coverLetter.tex
@@ -19,26 +19,25 @@
 %	YOUR NAME AND CONTACT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\namefrom{John Smith} % Name
+\namefrom{Rafael P\'erez} % Name
 
 \addrfrom{
 \today\\[12pt] % Date
-123 Broadway \\ % Address
-City, State 12345
+238 Oceana Boulevard \\ % Address
+Southampton UK, SO14 3JG
 }
 
-\phonefrom{(000) 111-1111} % Phone number
-
-\emailfrom{john@smith.com} % Email address
+\phonefrom{+44 (0) 744 954 9630} % Phone number
+\emailfrom{rpereztorro@gmail.com} % Email address
 
 %----------------------------------------------------------------------------------------
 %	ADDRESSEE AND GREETING/CLOSING
 %----------------------------------------------------------------------------------------
 
-\greetto{Dear Mrs. Smith,} % Greeting text
-\closeline{Sincerely yours,} % Closing text
+\greetto{Dear Sir or Madam,} % Greeting text
+\closeline{Yours Faithfully,} % Closing text
 
-\nameto{Mrs. Jane Smith} % Addressee of the letter above the to address
+\nameto{} % Addressee of the letter above the to address
 
 \addrto{
 Recruitment Officer \\ % To address
