Change phd title

--- a/cv.tex
+++ b/cv.tex
@@ -69,7 +69,7 @@ Responsible for Aero \& CAD for the desing of a solar powered race car for the \
 
 \eduitem{2013 -- November 2016 (Expected)}
      	{University of Southampton (UK)}
-     	{PhD -- LES of Tandem Aerofoils} 
+     	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
 	\begin{itemize}
 	\itemsep -1pt
 		\item Technical Writing
