--- a/cv.tex
+++ b/cv.tex
@@ -99,7 +99,7 @@ Responsible for Aero \& CAD for the desing of a solar powered race car for the \
 	\end{itemize}
 \end{eventlist}
 
-\section{Communication skills}
+\section{Communication Skills}
 
 \begin{factlist}
 \item{Native}{Spanish, Catalan}
@@ -107,7 +107,7 @@ Responsible for Aero \& CAD for the desing of a solar powered race car for the \
 \item{Basic}{French}
 \end{factlist}
 
-\section{Software skills}
+\section{Software Skills}
 
 \begin{factlist}
 
