--- a/coverLetter.tex
+++ b/coverLetter.tex
@@ -4,7 +4,7 @@
 \usepackage{charter} % Use the Charter font for the document text
 
 \newsavebox{\Luiuc}\sbox{\Luiuc}{\parbox[b]{1.75in}{\vspace{0.5in}
-\includegraphics[width=1.2\linewidth]{logo.png}}} % Company/institution logo at the top left of the page
+\includegraphics[width=0.5\linewidth]{NextLimit.png}}} % Company/institution logo at the top left of the page
 \makeletterhead{Uiuc}{\Lheader{\usebox{\Luiuc}}}
 
 \newlfmP{sigsize=50pt} % Slightly decrease the height of the signature field
@@ -41,9 +41,9 @@ Southampton UK, SO14 3JG
 
 \addrto{
 Recruitment Officer \\ % To address
-The Corporation \\
-123 Pleasant Lane \\
-City, State 12345
+Next Limit \\
+Calle de \'Angel Cavero 2 \\
+28043 Madrid, Spain 
 }
 
 %----------------------------------------------------------------------------------------
@@ -55,12 +55,26 @@ City, State 12345
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-PARAGRAPH ONE: State the reason for the letter, name the position or type of work you are applying for and identify the source from which you learned of the opening (i.e. career development center, newspaper, employment service, personal contact).
+I have recently seen your company has advertised an open position for a Research \&
+Development engineer for which I feel I would be a perfect fit.
 
-PARAGRAPH TWO: Indicate why you are interested in the position, the company, its products, services - above all, stress what you can do for the employer. If you are a recent graduate, explain how your academic background makes you a qualified candidate for the position. If you have practical work experience, point out specific achievements or unique qualifications. Try not to repeat the same information the reader will find in the resume. Refer the reader to the enclosed resume or application which summarizes your qualifications, training, and experiences. The purpose of this section is to strengthen your resume by providing details which bring your experiences to life. 
- 
-PARAGRAPH THREE: Request a personal interview and indicate your flexibility as to the time and place. Repeat your phone number in the letter and offer assistance to help in a speedy response. For example, state that you will be in the city where the company is located on a certain date and would like to set up an interview. Alternatively, state that you will call on a certain date to set up an interview. End the letter by thanking the employer for taking time to consider your credentials. 
+I have spent some time researching about Next Limit and in particular about XFlow
+and Real Flow. I must say that although my experience is build on more traditional CFD
+approaches I am very interested in the Lattice Boltzmann technique. In fact I recently
+started a personal project for coding my own LB code in Python in my spare time. As you can
+see in my CV, I have a deep understanding of flow physics gained throw my bachelors,
+master and doctoral studies. I have proven my value in the research field during my PhD in
+Southampton University and have at the moment one paper pending on review for the
+prestigious Journal of Fluid Mechanics scientific journal.
 
+In addition to my experience, I have a passion for programming and post-processing, something
+that seems to be important for the position advertised and that I would be more than
+pleased to bring into the Next Level team.
+
+I would appreciate the opportunity to meet you either face to face or via
+video-conference. I am currently based in UK but please feel free to contact me by
+either phone or email to arrange a meeting at your convenience. Thank you for
+your time and I look forward to hearing from you.
 %----------------------------------------------------------------------------------------
 
 \end{newlfm}
