--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -67,7 +67,7 @@ Responsible for Aero \& CAD for the desing of a solar powered race car for the \
 
 \begin{eventlist}
 
-\eduitem{2013 -- November 2016 (Expected)}
+\eduitem{2013 -- 2016}
      	{University of Southampton (UK)}
      	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
 	\begin{itemize}
