--- a/coverLetter.tex
+++ b/coverLetter.tex
@@ -7,7 +7,7 @@
 \usepackage{charter} % Use the Charter font for the document text
 
 \newsavebox{\Luiuc}\sbox{\Luiuc}{\parbox[b]{1.75in}{\vspace{0.5in}
-\includegraphics[width=0.5\linewidth]{NextLimit.png}}} % Company/institution logo at the top left of the page
+\includegraphics[width=\linewidth]{myLogo.png}}} % Company/institution logo at the top left of the page
 \makeletterhead{Uiuc}{\Lheader{\usebox{\Luiuc}}}
 
 \newlfmP{sigsize=50pt} % Slightly decrease the height of the signature field
@@ -43,10 +43,10 @@ Southampton UK, SO14 3JG
 \nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Recruitment Officer \\ % To address
-Next Limit \\
-Calle de \'Angel Cavero 2 \\
-28043 Madrid, Spain 
+Human Resources, \\ % To address
+CD-adapco \\
+200 Shepherds Bush Road\\
+W6 7NL, London -- Hammersmith 
 }
 
 %----------------------------------------------------------------------------------------
@@ -58,26 +58,24 @@ Calle de \'Angel Cavero 2 \\
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-I have recently seen your company has advertised an open position for a Research \&
-Development engineer for which I feel I would be a perfect fit.
+I have recently seen your company has advertised an open position for an application
+engineer for which I feel I have the appropriate set of skills.
 
-I have spent some time researching about Next Limit and in particular about XFlow
-and Real Flow. I must say that although my experience is build on more traditional CFD
-approaches I am very interested in the Lattice Boltzmann technique. In fact I recently
-started a personal project for coding my own LB code in Python in my spare time. As you can
-see in my CV, I have a deep understanding of flow physics gained throw my bachelors,
-master and doctoral studies. I have proven my value in the research field during my PhD in
-Southampton University and have at the moment one paper pending on review for the
-prestigious Journal of Fluid Mechanics scientific journal.
+I have had the pleasure of interacting personally with your company a couple of times in
+the past while studying an MSc in Race Car Aerodynamics at Southampton University and always
+thought it would be really nice to be part of CD-adapco. Consequently I have always been
+checking any openings for your offices in Hammersmith.
 
-In addition to my experience, I have a passion for programming and post-processing, something
-that seems to be important for the position advertised and that I would be more than
-pleased to bring into the Next Level team.
+I believe that after 3 years experience in research based I have acquired a solid base of
+knowledge in the field of CFD. Additionally I am an experienced user of Star-CCM+ since I
+have been helping students with their individual CFD projects for the past 3 years which
+would be really useful for the position.
 
-I would appreciate the opportunity to meet you either face to face or via
-video-conference. I am currently based in UK but please feel free to contact me by
-either phone or email to arrange a meeting at your convenience. Thank you for
-your time and I look forward to hearing from you.
+Finally, I believe I could create a sense of confidence among potential customers
+as I feel I am a very friendly and approachable person.
+
+Thank you for your time and consideration and please feel free to contact me if you need
+any more details.
 %----------------------------------------------------------------------------------------
 
 \end{newlfm}
