--- a/coverLetter.tex
+++ b/coverLetter.tex
@@ -43,10 +43,10 @@ Southampton UK, SO14 3JG
 \nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Human Resources, \\ % To address
-CD-adapco \\
-200 Shepherds Bush Road\\
-W6 7NL, London -- Hammersmith 
+Exa, \\ % To address
+Woolstone, Wick Lane\\
+Devizes, Wiltshire\\
+SN10 5DP, UK 
 }
 
 %----------------------------------------------------------------------------------------
@@ -61,15 +61,16 @@ W6 7NL, London -- Hammersmith
 I have recently seen your company has advertised an open position for an application
 engineer for which I feel I have the appropriate set of skills.
 
-I have had the pleasure of interacting personally with your company a couple of times in
-the past while studying an MSc in Race Car Aerodynamics at Southampton University and always
-thought it would be really nice to be part of CD-adapco. Consequently I have always been
-checking any openings for your offices in Hammersmith.
+I have had the pleasure of interacting personally with your company in the summer of 2013 through Dr
+Joe Amodeo for the very same job offer. I recall getting a very good impression from the
+company but unfortunatelly our paths diverged and I finally took a PhD position in
+Southampton University.
 
-I believe that after 3 years experience in research based I have acquired a solid base of
-knowledge in the field of CFD. Additionally I am an experienced user of Star-CCM+ since I
-have been helping students with their individual CFD projects for the past 3 years which
-would be really useful for the position.
+At the time I considered myself prepared for the job but, after 3 years experience in
+research based I have acquired a solid base of knowledge in the field of CFD and I even
+more confident about it. Additionally I have developed a customer-like experience through
+assisting students with their individual CFD projects for the past 3 years which would be
+really useful for the position.
 
 Finally, I believe I could create a sense of confidence among potential customers
 as I feel I am a very friendly and approachable person.
