--- a/coverLetter.tex
+++ b/coverLetter.tex
@@ -58,19 +58,19 @@ SN10 5DP, UK
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-I have recently seen your company has advertised an open position for an application
+I have recently seen advertised on your website an open position for an application
 engineer for which I feel I have the appropriate set of skills.
 
-I have had the pleasure of interacting personally with your company in the summer of 2013 through Dr
-Joe Amodeo for the very same job offer. I recall getting a very good impression from the
-company but unfortunatelly our paths diverged and I finally took a PhD position in
-Southampton University.
+I have had the pleasure of speaking personally with your colleague Dr~Joe~Amodeo in the
+summer of 2013 for the very same job offer. I recall getting a very good
+impression from the company but unfortunately our paths diverged and I finally took a PhD
+position in Southampton University.
 
 At the time I considered myself prepared for the job but, after 3 years experience in
-research based I have acquired a solid base of knowledge in the field of CFD and I even
-more confident about it. Additionally I have developed a customer-like experience through
-assisting students with their individual CFD projects for the past 3 years which would be
-really useful for the position.
+research I have acquired a solid base of knowledge in the field of CFD and I am more
+confident that I can successfully fill this position. Additionally I have developed a
+excellent customer-care skills through assisting students with their individual CFD
+projects for the past 3 years which I feel would be really beneficial in this position.
 
 Finally, I believe I could create a sense of confidence among potential customers
 as I feel I am a very friendly and approachable person.
