--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -53,7 +53,7 @@ Lead "Applications of CFD", "CFD Surgery", and "Aerodynamics" modules' lab sessi
      {University of Madrid}
      {Solar Car Prototype}
 
-Responsible for Aero \& CAD for the desing of a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}.
+Responsible for Aero \& CAD for the design of a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}.
 \begin{itemize}
 \itemsep -1pt
 	\item Responsible for designing the car within competition constraints.
@@ -73,7 +73,7 @@ Responsible for Aero \& CAD for the desing of a solar powered race car for the \
 	\begin{itemize}
 	\itemsep -1pt
 		\item Technical Writing
-		\item Advaced Computational Methods
+		\item Advanced Computational Methods
 		\item Aeroacoustics
 	\end{itemize}
 
@@ -82,9 +82,9 @@ Responsible for Aero \& CAD for the desing of a solar powered race car for the \
      	{MSc -- Race Car Aerodynamics -- 1:1} 
   	\begin{itemize}
 	\itemsep -1pt
-	   \item Desing of an Open Wheel Race Car
+	   \item Design of an Open Wheel Race Car
 	   \item CFD Modelling
-	   \item Desing Search \& Optimisation
+	   \item Design Search \& Optimisation
 	   \item Wind Tunnel Testing
 	\end{itemize}
 
