Add About Me section

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -1,15 +1,15 @@
 \documentclass[fontsize=10pt]{tccv}
 \usepackage[english]{babel}
 \usepackage{graphicx,textcomp}
+\usepackage{lipsum} 
+
 
 \begin{document}
 
 \part{CFD Engineer --- Aerodynamicist}{Rafael P\'erez}
 
 \section{Experience \& Projects}
-
 \begin{eventlist}
-
 \workitem{November 2013 -- Present}
      {University of Southampton}
      {Post-Graduate Researcher}
@@ -62,11 +62,26 @@ Responsible for Aero \& CAD for the design of a solar powered race car for the \
 \end{itemize}
 \end{eventlist}
 
+%\section{Communication Skills}
+%\begin{factlist}
+%\item{Native}{Spanish, Catalan}
+%\item{Proficient}{English}
+%\item{Basic}{French}
+%\end{factlist}
+
+\section{Software Skills}
+\begin{factlist}
+\item{Good level}
+     {Fortran, Python, Matlab, MPI, OPENMP, Ansys~(Fluent), STAR~CCM+, TecPlot360,
+     Paraview ,CatiaV5, SolidWorks, Office}
+\item{Intermediate}
+     {Java, \LaTeX, VBA,  Unix, GIT}
+\item{Basic level}
+     {C++, Pointwise, OpenFoam}
+\end{factlist}
 
 \section{Education}
-
 \begin{eventlist}
-
 \eduitem{2013 -- 2016}
      	{University of Southampton (UK)}
      	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
@@ -99,27 +114,5 @@ Responsible for Aero \& CAD for the design of a solar powered race car for the \
 	\end{itemize}
 \end{eventlist}
 
-\section{Communication Skills}
-
-\begin{factlist}
-\item{Native}{Spanish, Catalan}
-\item{Proficient}{English}
-\item{Basic}{French}
-\end{factlist}
-
-\section{Software Skills}
-
-\begin{factlist}
-
-\item{Good level}
-     {Fortran, Python, Matlab, MPI, OPENMP, Ansys~(Fluent), STAR~CCM+, TecPlot360, Paraview ,CatiaV5, SolidWorks, Office}
-
-\item{Intermediate}
-     {Java, \LaTeX, VBA,  Unix, GIT}
-
-\item{Basic level}
-     {C++, Pointwise, OpenFoam}
-
-\end{factlist}
 
 \end{document}
