--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -14,77 +14,84 @@
      {University of Southampton}
      {Post-Graduate Researcher}
 
-Development of a LES Finite Difference Fortran code for wall bounded flows. Investigate the effect of Leading Edge Modifications on
+Investigate the effect of Leading Edge Modifications on
 the performance of thick Aerofoils.
 \begin{itemize}
 	\itemsep -1pt
-	\item Development of High-Performance Parallel CFD code.
-	\item Development of High-Quality Multi-Block Structured Grids.
-	\item Development of Parallel Post-Processing Tools.
-	\item Development of Parallel 3D Interpolation Tools for 
-	Grid recycling.
-	\item Development of an interactive Python Mesh Generation tool.
+	\item High-Performance Parallel CFD code \\ (+80~Million~cells).
+	\item High-Quality Multi-Block Structured Grids.
+	\item Parallel Post-Processing Tools.
+	\item Parallel 3D Interpolation Tools.
+	\item Reduced Order Modelling.
+	\item Interactive Python Mesh Generation tool.
 \end{itemize}
 
 \workitem{November 2013 -- Present}
 	{University of Southampton}
 	{Assistant Lecturer}
 
-Lead "Applications of CFD", "CFD Surgery", and "Aerodynamics" modules' lab sessions.
-	\begin{itemize}
+\begin{itemize}
 	\itemsep -1pt
-		\item Lead lab sessions for Ansys FLuent \& Star CCM+.
-		\item Problem Solving for multiple CFD applications.
-		\item Introducing new users to the CFD methodology.
-	\end{itemize}
+	\item Teaching Aerodynamics \& Computational Fluid Dynamics
+	\item Teaching Ansys FLuent \& Star CCM+.
+	\item Problem Solving for multiple CFD applications.
+	\item Introducing new users to the CFD methodology.
+\end{itemize}
 
 \workitem{September 2012 -- May 2013}
      {University of Southampton}
      {Race Car Design Team}
 
-     Team leader for CFD methodology in a 6-person project whose objective was to design an open wheel Hill Climb Race car.
+     CFD methodology leader for an open wheel Hill Climb Race car design project.
      \begin{itemize}
 	\itemsep -1pt
-     	\item Development of a VBA/JAVA code for surrogate modelling optimisation.
-     	\item Development of Java macros for automating\\ pre/post processing.
+     	\item VBA/JAVA code for surrogate modelling optimisation.
+     	\item Java macros for automating\\ pre/post processing.
      \end{itemize}
 
 \workitem{September 2011 -- July 2012}
      {University of Madrid}
      {Solar Car Prototype}
 
-Responsible for Aero \& CAD for the design of a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}.
+Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}.
 \begin{itemize}
 \itemsep -1pt
-	\item Responsible for designing the car within competition constraints.
+	\item Design within competition constraints.
         \item Full Aerodynamic analysis for performance optimisation.
-	\item Drag Reduction lead to \textbf{\texttildelow 30\% power savings}.
+	\item \textbf{\texttildelow 30\% Drag Reduction}.
 \end{itemize}
 \end{eventlist}
 
-%\section{Communication Skills}
-%\begin{factlist}
-%\item{Native}{Spanish, Catalan}
-%\item{Proficient}{English}
-%\item{Basic}{French}
-%\end{factlist}
-
-\section{Software Skills}
+\section{Communication Skills}
 \begin{factlist}
-\item{Good level}
-     {Fortran, Python, Matlab, MPI, OPENMP, Ansys~(Fluent), STAR~CCM+, TecPlot360,
-     Paraview ,CatiaV5, SolidWorks, Office}
-\item{Intermediate}
-     {Java, \LaTeX, VBA,  Unix, GIT}
-\item{Basic level}
-     {C++, Pointwise, OpenFoam}
+\item{Native}{Spanish, Catalan}
+\item{Proficient}{English}
+\item{Basic}{French}
 \end{factlist}
 
+\vspace{-20pt}
+\section{Software/Computer Skills}
+\begin{factlist}
+\item{Expert}
+     {Fortran, Python, Matlab, MPI, OPENMP, Ansys~(Fluent), STAR~CCM+, TecPlot360,
+     Paraview ,CatiaV5, SolidWorks, Office, GIT}
+\item{Fair}
+     {Java, \LaTeX, VBA,  Unix}
+\item{Basic}
+     {C++, Pointwise, OpenFoam, Blender}
+\end{factlist}
+
+
+\vspace{-20pt}
 \section{Education}
 \begin{eventlist}
 \eduitem{2013 -- 2016}
      	{University of Southampton (UK)}
      	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
+
+Under consideration for Journal of Fluid Mechanics:\\ \emph{``A large-eddy simulation on a
+deep-stalled aerofoil with a wavy leading edge''}
+
 	\begin{itemize}
 	\itemsep -1pt
 		\item Technical Writing
@@ -113,6 +120,16 @@ Responsible for Aero \& CAD for the design of a solar powered race car for the \
 	   \item Aerospace Maintenance
 	\end{itemize}
 \end{eventlist}
+
+\vspace{-20pt}
+\section{More about me} 
+\begin{itemize}
+	\itemsep -1pt
+	\item Full driving license
+	\item Full availability
+	\item Willing to travel if necessary
+\end{itemize}
+
 
 
 \end{document}
