--- a/tccv.cls
+++ b/tccv.cls
@@ -96,10 +96,10 @@
 	\begin{minipage}[c]{0.8\textwidth}
 	\bigskip
 	\section{About me}
-	Aeronautical engineerg with excellent problem-solving skills. After 3 years in the
+	Aeronautical engineer with excellent problem-solving skills. After 3 years in the
 	research field I seek a position that enables me to develop my career within
 	industry. I believe my skills are highly transferable to any
-	technical/IT/engineering position.  Currently reside in UK but happy to move if
+	technical/IT/engineering position. Currently reside in UK but happy to move if
 	required.
 	\end{minipage}
 	\bigskip
@@ -207,7 +207,7 @@
     \newdimen\unbaseline
     \unbaseline=\dimexpr-\baselinestretch\baselineskip\relax
     \renewcommand\item[2]{%
-	\textsc{##1} & {\raggedright ##2\medskip\\}\\[\unbaseline]}
+	\textsc{##1} & {\raggedright ##2\smallskip\\}\\[\unbaseline]}
     \tabularx{\linewidth}{rX}}
     {\endtabularx}
 
