--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -77,7 +77,7 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
      Paraview ,CatiaV5, SolidWorks, Office, GIT}
 \item{Fair}
      {Java, \LaTeX, VBA,  Unix}
-\item{Basic}
+\item{Good}
      {C++, Pointwise, OpenFoam, Blender}
 \end{factlist}
 
