Spelling of Fluent

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -33,7 +33,7 @@ the performance of thick Aerofoils.
 \begin{itemize}
 	\itemsep -1pt
 	\item Teaching Aerodynamics \& Computational Fluid Dynamics
-	\item Teaching Ansys FLuent \& Star CCM+.
+	\item Teaching Ansys Fluent \& Star CCM+.
 	\item Problem Solving for multiple CFD applications.
 	\item Introducing new users to the CFD methodology.
 \end{itemize}
@@ -129,7 +129,4 @@ deep-stalled aerofoil with a wavy leading edge''}
 	\item Full availability
 	\item Willing to travel if necessary
 \end{itemize}
-
-
-
 \end{document}
