--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -57,7 +57,7 @@ Sahara Force India Formula One Team \\
 Dadford Road, Silverstone \\
 Northamptonshire, NN12 8TJ (UK)\\
 \\
-Job reference: \textbf{CFD Engineer}  
+Job reference: \textbf{CFD Software Developer}  
 }
 
 %----------------------------------------------------------------------------------------
@@ -69,18 +69,17 @@ Job reference: \textbf{CFD Engineer}
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-I am writing this letter in response to the ``CFD Engineer'' job advert on Sahara Force
+I am writing this letter in response to the ``CFD Software Developer'' job advert on Sahara Force
 India's website for which I believe I have the appropriate set of skills. 
 
-I am currently finishing (this November) a PhD on the topic of Large-Eddy-Simulations of
-wings with leading-edge modifications, and I am looking to take this further on my next
-career challenge. After finishing my MSc in Race Car Aerodynamics I felt myself prepared to take
-on a position such as the one now in consideration. However, after three years in the
-research field, not only have I enhanced my previous skills but also acquired new
-ones. A side from enhancing my knowledge, the PhD has made me more independent, being able
-to quickly find solutions to specific problems. All in all, research has expanded my
-knowledge and expertise to such an extent that I am able to meet expectations to a higher
-degree and fight for each millisecond in each lap.
+I am at the end of completing (this November) a PhD on the topic of Large-Eddy-Simulations
+of wings with leading-edge modifications, and I am looking to take this further on my next
+career challenge. During these last three years in the research field, not only have I
+strengthened my scientific background but my programming skills. I have dealt with a
+highly parallelised FORTRAN90 code, to which I added several features and functionalities,
+on a daily basis. Due to this I have become very confident in using Version Control tools,
+especially GIT. A side from enhancing my knowledge, the PhD has made me more
+independent, being able to quickly find solutions to specific problems. 
 
 Additionally, although the research experience has been very rewarding, I feel that due to
 my competitive character, I would much rather continue developing my career in the
