--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -90,7 +90,7 @@ linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/r
 if you need any more details.
 
 Yours Faithfully, \newline % Closing text
-\includegraphics[scale=0.6]{sgtr} \newline 
+\includegraphics[scale=0.6]{sgtrBlue} \newline 
 Rafael P\'erez
 
 %----------------------------------------------------------------------------------------
