--- a/RPerezTorro_CoverLetter.tex
+++ b/RPerezTorro_CoverLetter.tex
@@ -53,11 +53,11 @@ Southampton UK, SO14 3JG
 \nameto{} % Addressee of the letter above the to address
 
 \addrto{
-Altran Italia S.p.A. \\
-Via Triburtina, 1232 \\
-Roma, 00131 (Italia)\\
+Manor Technical Centre \\
+Chalker Way, \\
+Banbury (Oxfordshire), OX16 4XD (UK)\\
 \\
-Job reference: \textbf{Computational Fluid Dynamics (CFD) Engineer}  
+Job reference: \textbf{Student CFD Engineer}  
 }
 
 %----------------------------------------------------------------------------------------
@@ -69,24 +69,22 @@ Job reference: \textbf{Computational Fluid Dynamics (CFD) Engineer}
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-I am writing this letter in response to the ``Computational Fluid Dynamics (CFD)
-Engineer'' job advert on Altran's website for which I believe I have the appropriate set of skills. 
+I am writing this letter in response to the ``Student CFD Engineer'' job advert on
+Manor-Racing's website for which I believe I have the appropriate set of skills. 
 
-I am at the end of completing (this November) a PhD on the topic of Large-Eddy-Simulations
-of wings with leading-edge modifications, and I am looking to take this further on my next
-career challenge. During these last three years in the research field, not only have I
-strengthened my scientific background but my also my experience in dealing with industrial
-problems. During the "CFD Surgery" sessions at University of Southampton, students would
-bring CFD related problems they were facing during their last year projects. It was often
-the case that those projects were proposed by companies from different backgrounds. As a
-consequence, this trained me to tackle many different industrial problems as if I was
-working as a CFD consultant.
+I am currently finishing (this November) a PhD on the topic of Large-Eddy-Simulations of
+wings with leading-edge modifications, and I am looking to take this further on my next
+career challenge. After finishing my MSc in Race Car Aerodynamics I felt myself prepared to take
+on a position such as the one now in consideration. However, after three years in the
+research field, not only have I enhanced my previous skills but also acquired new
+ones. A side from enhancing my knowledge, the PhD has made me more independent, being able
+to quickly find solutions to specific problems. All in all, research has expanded my
+knowledge and expertise to such an extent that I am able to meet expectations to a higher
+degree and fight for each millisecond in each lap.
 
-Additionally, as I hope you noticed in my CV, during both my MSc and Bachelors I was
-involved in projects that needed both CAD and CAE tools to be applied. Specially while
-designing the Solar Car in Madrid, I had to build the entire prototype's CAD model in
-CatiaV5 with the necessary parametrisation in order to allow the later aerodynamic
-optimisation.
+Additionally, although the research experience has been very rewarding, I feel that due to
+my competitive character, I would much rather continue developing my career in the
+fast-paced and team-based working environment of a F1 team.
 
 Thank you for your time and consideration and please feel free to contact me, or visit my
 linkedin profile (\href{https://uk.linkedin.com/in/rperezt}{uk.linkedin.com/in/rperezt})
