Update more general CV

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-\part{CFD Engineer --- Aerodynamicist}{Rafael P\'erez}
+\part{CFD/Aeronautical Engineer}{Rafael P\'erez}
 
 \section{Experience \& Projects}
 \begin{eventlist}
@@ -14,25 +14,23 @@
      {University of Southampton}
      {Post-Graduate Researcher}
 
-Investigate the effect of Leading Edge Modifications on
-the performance of thick Aerofoils.
+Investigate the effect of wing shape Modifications on
+the aerodynamic performance.
 \begin{itemize}
 	\itemsep -1pt
-	\item High-Performance Parallel CFD code \\ (+80~Million~cells).
-	\item High-Quality Multi-Block Structured Grids.
-	\item Parallel Post-Processing Tools.
-	\item Parallel 3D Interpolation Tools.
-	\item Reduced Order Modelling.
-	\item Interactive Python Mesh Generation tool.
+	\item CFD code (\textbf{+10,000 lines}) development.
+	\item Big-Data manipulation (\textbf{+1Tb datasets}).
+	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI}).
+	\item High Quality Technical Reports (\textbf{1 Journal paper and 3 International
+	conferences}).
 \end{itemize}
 
 \workitem{November 2013 -- Present}
 	{University of Southampton}
 	{Assistant Lecturer}
-
 \begin{itemize}
 	\itemsep -1pt
-	\item Teaching Aerodynamics \& Computational Fluid Dynamics
+	\item Teaching Aerodynamics \& Computational Fluid Dynamics (\textbf{+30 Students}).
 	\item Teaching Ansys Fluent \& Star CCM+.
 	\item Problem Solving for multiple CFD applications.
 	\item Introducing new users to the CFD methodology.
@@ -42,11 +40,11 @@ the performance of thick Aerofoils.
      {University of Southampton}
      {Race Car Design Team}
 
-     CFD methodology leader for an open wheel Hill Climb Race car design project.
+CFD methodology leader for an open wheel Hill Climb Race car design project.
      \begin{itemize}
 	\itemsep -1pt
-     	\item VBA/JAVA code for surrogate modelling optimisation.
-     	\item Java macros for automating\\ pre/post processing.
+     	\item Obtained \textbf{33\% efficiency} improvement.
+     	\item Process automation \\(\textbf{enhanced productivity by +500\%}).
      \end{itemize}
 
 \workitem{September 2011 -- July 2012}
@@ -56,9 +54,8 @@ the performance of thick Aerofoils.
 Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}.
 \begin{itemize}
 \itemsep -1pt
-	\item Design within competition constraints.
-        \item Full Aerodynamic analysis for performance optimisation.
-	\item \textbf{\texttildelow 30\% Drag Reduction}.
+	\item Created full CAD model within competition constraints.
+	\item \textbf{\texttildelow 30\% Drag Reduction} by \\full aerodynamic analysis.
 \end{itemize}
 \end{eventlist}
 
