Updated software skills section

--- a/RPerezTorro.tex
+++ b/RPerezTorro.tex
@@ -14,15 +14,15 @@
      {University of Southampton}
      {Post-Graduate Researcher}
 
-Investigate the effect of wing shape Modifications on
-the aerodynamic performance.
+Investigate the effect of wing shape modifications on
+the aerodynamic performance
 \begin{itemize}
 	\itemsep -1pt
-	\item CFD code (\textbf{+10,000 lines}) development.
-	\item Big-Data manipulation (\textbf{+1Tb datasets}).
-	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI}).
+	\item CFD code (\textbf{+10,000 lines}) development
+	\item Big-Data manipulation (\textbf{+1Tb datasets})
+	\item High Performance Computing\\ (\textbf{+8,000 cores using MPI})
 	\item High Quality Technical Reports (\textbf{1 Journal paper and 3 International
-	conferences}).
+	conferences})
 \end{itemize}
 
 \workitem{November 2013 -- Present}
@@ -30,32 +30,32 @@ the aerodynamic performance.
 	{Assistant Lecturer}
 \begin{itemize}
 	\itemsep -1pt
-	\item Teaching Aerodynamics \& Computational Fluid Dynamics (\textbf{+30 Students}).
-	\item Teaching Ansys Fluent \& Star CCM+.
-	\item Problem Solving for multiple CFD applications.
-	\item Introducing new users to the CFD methodology.
+	\item Teaching Aerodynamics \& Computational Fluid Dynamics (\textbf{+30 Students})
+	\item Teaching Ansys Fluent \& Star CCM+
+	\item Problem Solving for multiple CFD applications
+	\item Introducing new users to the CFD methodology
 \end{itemize}
 
 \workitem{September 2012 -- May 2013}
      {University of Southampton}
      {Race Car Design Team}
 
-CFD methodology leader for an open wheel Hill Climb Race car design project.
+CFD methodology leader for an open wheel Hill Climb Race car design project
      \begin{itemize}
 	\itemsep -1pt
-     	\item Obtained \textbf{33\% efficiency} improvement.
-     	\item Process automation \\(\textbf{enhanced productivity by +500\%}).
+     	\item Obtained \textbf{33\% efficiency} improvement
+     	\item Process automation \\(\textbf{enhanced productivity by +500\%})
      \end{itemize}
 
 \workitem{September 2011 -- July 2012}
      {University of Madrid}
      {Solar Car Prototype}
 
-Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}.
+Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.com/global/environment-society/ecomarathon.html}{Shell Eco-Marathon}
 \begin{itemize}
 \itemsep -1pt
-	\item Created full CAD model within competition constraints.
-	\item \textbf{\texttildelow 30\% Drag Reduction} by \\full aerodynamic analysis.
+	\item Created full CAD model within competition \\constraints
+	\item \textbf{\texttildelow 30\% Drag Reduction} by full aerodynamic \\analysis
 \end{itemize}
 \end{eventlist}
 
@@ -69,13 +69,18 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
 \vspace{-20pt}
 \section{Software/Computer Skills}
 \begin{factlist}
-\item{Expert}
-     {Fortran, Python, Matlab, MPI, OPENMP, Ansys~(Fluent), STAR~CCM+, TecPlot360,
-     Paraview ,CatiaV5, SolidWorks, Office, GIT}
-\item{Fair}
-     {Java, \LaTeX, VBA,  Unix}
-\item{Good}
-     {C++, Pointwise, OpenFoam, Blender}
+\item{\textbf{Programming:}}
+     {Fortran, Python, C++, Java, Unix, Bash, VBA, MATLAB, MPI, OPENMP}
+\item{\textbf{Version Control:}}
+     {GIT}
+\item{\textbf{CAD:}}
+     {CatiaV5, SolidWorks}
+\item{\textbf{CFD:}}
+     {Ansys-Fluent, Star-CCM+, OpenFoam}
+\item{\textbf{Mesh/Grid:}}
+     {Pointwise, ICEM-CFD, Ansys-Mesh, Gambit}
+\item{\textbf{Other:}}
+     {MS-Office, MS-Project}
 \end{factlist}
 
 
@@ -85,10 +90,6 @@ Aero \& CAD leader for a solar powered race car for the \href{http://www.shell.c
 \eduitem{2013 -- 2016}
      	{University of Southampton (UK)}
      	{PhD -- \normalsize{LES of Wavy Leading Edge Aerofoils}} 
-
-Under consideration for Journal of Fluid Mechanics:\\ \emph{``A large-eddy simulation on a
-deep-stalled aerofoil with a wavy leading edge''}
-
 	\begin{itemize}
 	\itemsep -1pt
 		\item Technical Writing
@@ -109,7 +110,7 @@ deep-stalled aerofoil with a wavy leading edge''}
 
 \eduitem{2007 -- 2012}
 	{UPM Madrid (SPAIN)}
-	{BEng -- Aeronautical Engineer -- 71\%}
+	{BEng -- Aeronautical Engineer -- 2:1}
   	\begin{itemize}
 	\itemsep -1pt
 	   \item Aerodynamics
@@ -123,7 +124,7 @@ deep-stalled aerofoil with a wavy leading edge''}
 \begin{itemize}
 	\itemsep -1pt
 	\item Full driving license
-	\item Full availability
-	\item Willing to travel if necessary
+	\item Working hours flexibility
+	\item Willing to travel
 \end{itemize}
 \end{document}
